5분 실시간 데이터 수집 변경 update_or_create method 사용

--- a/cashup_backend/CollectBackData5m.ipynb
+++ b/cashup_backend/CollectBackData5m.ipynb
@@ -98,22 +98,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cd100bbb",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-313987c4b929>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    340\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    341\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0mup_flow_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"DN\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 342\u001b[0;31m                         \u001b[0mflow_element\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mup_flow_trade\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"S#4\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    343\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    344\u001b[0m             \u001b[0mprev_up_flow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mflow_element_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'min_price'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "while True:\n",
     "    URL = \"https://www.bitmex.com/api/v1/trade/bucketed?symbol=XBT&binSize=5m&partial=false&start={}&count=1000&reverse=false\".format(start)\n",
@@ -430,7 +418,7 @@
     "                        flow_element.down_flow_confirm = \"DN\"\n",
     "                        \n",
     "                    if down_flow_list.count(\"UP\") == 5:\n",
-    "                        flow_element.down_flow_trade(\"B#4\")                        \n",
+    "                        flow_element.down_flow_trade = \"B#4\"                      \n",
     "\n",
     "            prev_down_flow = flow_element_list[1]['max_price']\n",
     "\n",
@@ -456,7 +444,7 @@
     "                        flow_element.up_flow_confirm = \"DN\"\n",
     "                    \n",
     "                    if up_flow_list.count(\"DN\") == 5:\n",
-    "                        flow_element.up_flow_trade(\"S#4\")\n",
+    "                        flow_element.up_flow_trade = \"S#4\"\n",
     "\n",
     "            prev_up_flow = flow_element_list[1]['min_price']\n",
     "\n",
@@ -480,18 +468,16 @@
     "                                last_down_flow_time = \"\"\n",
     "\n",
     "                    elif down_flow_list[-2:] == ['UP', 'UP']:\n",
-    "                        flow_element.down_flow_trade = \"S#2\"\n",
+    "                        flow_element.down_flow_trade = \"S#3\"\n",
     "\n",
-    "                    if len(down_flow_element_list) > 2:\n",
+    "                    if len(down_flow_element_list) > 1:\n",
     "                        down_flow_element_list.pop(0)\n",
-    "                        down_flow_confirm_list.pop(0)\n",
     "                    down_flow_element_list.append(flow_element)\n",
-    "                    down_flow_confirm_list.append(flow_element.down_flow_confirm)\n",
-    "\n",
-    "                    if len(down_flow_element_list) > 2:\n",
-    "                        if down_flow_confirm_list.count(\"DN\") == 1 and down_flow_confirm_list[1] == \"DN\":\n",
-    "                            down_flow_element_list[1].down_flow_trade = \"B#3\"\n",
-    "                            down_flow_element_list[1].save()\n",
+    "                    \n",
+    "                    \n",
+    "                    if len(down_flow_element_list) > 1:\n",
+    "                        if down_flow_element_list[0].down_flow_confirm is None and flow_element.down_flow_confirm == \"DN\":\n",
+    "                            flow_element.down_flow_trade = \"B#2\"\n",
     "\n",
     "                if flag and flow_element.up_flow:\n",
     "                    if last_up_flow_time != \"\":\n",
@@ -501,18 +487,16 @@
     "                                last_up_flow_time = \"\"\n",
     "\n",
     "                    elif up_flow_list[-2:] == ['DN', 'DN']:\n",
-    "                        flow_element.up_flow_trade = \"B#2\"\n",
+    "                        flow_element.up_flow_trade = \"B#3\"\n",
     "\n",
-    "                    if len(up_flow_element_list) > 2:\n",
+    "                    if len(up_flow_element_list) > 1:\n",
     "                        up_flow_element_list.pop(0)\n",
-    "                        up_flow_confirm_list.pop(0)\n",
     "                    up_flow_element_list.append(flow_element)\n",
-    "                    up_flow_confirm_list.append(flow_element.up_flow_confirm)\n",
     "\n",
-    "                    if len(up_flow_element_list) > 2:\n",
-    "                        if up_flow_confirm_list.count(\"UP\") == 1 and up_flow_confirm_list[1] == \"UP\":\n",
-    "                            up_flow_element_list[1].up_flow_trade = \"S#3\"\n",
-    "                            up_flow_element_list[1].save()\n",
+    "                    if len(up_flow_element_list) > 1:\n",
+    "                        if up_flow_element_list[0].up_flow_confirm is None and flow_element.up_flow_confirm == \"UP\":\n",
+    "                            flow_element.down_flow_trade = \"S#2\"\n",
+    "                            \n",
     "                            \n",
     "        if flow_element:\n",
     "            flow_element.save()\n",
