models 변경 - signal_price 삭제 및 ForeignKey -> OneToOne signal fU 및 fD 부호 구하는 로직 수정

--- a/cashup_backend/CollectBackData5m.ipynb
+++ b/cashup_backend/CollectBackData5m.ipynb
@@ -206,46 +206,77 @@
     "                if other_up_dn_list.count(\"D\") == 6:\n",
     "                    if prev_up_down == \"D\" and max(dn_list) == dn_list[0]:\n",
     "                        if prev_signal_down_price != 0:\n",
-    "                            if prev_signal_down_price <= dn_list[0]:\n",
+    "                            if prev_signal_down_price < min(up_list):\n",
     "                                signal = \"fD(U)\"\n",
+    "                            elif prev_signal_down_price == min(up_list):\n",
+    "                                signal = \"fD(0)\"\n",
     "                            else:\n",
     "                                signal = \"fD(D)\"\n",
-    "                            signal_price = min(dn_list)\n",
-    "                        prev_signal_down_price = dn_list[0]\n",
+    "                        prev_signal_down_price = min(up_list)\n",
     "                else:\n",
-    "                    if prev_up_down == \"D\" and max(new_dn_list) == new_dn_list[0]:\n",
-    "                        if prev_signal_down_price <= new_dn_list[0]:\n",
-    "                            signal = \"fD(U)\"\n",
-    "                        else:\n",
-    "                            signal = \"fD(D)\"\n",
-    "                        signal_price = min(new_dn_list)   \n",
-    "                        prev_signal_down_price = dn_list[0]\n",
-    "            if len(new_up_list) > 2:\n",
-    "                new_up_list.pop(0)\n",
-    "            new_up_list.append(low_price)\n",
+    "                    other_up_dn_list.reverse()\n",
+    "                    up_list.reverse()\n",
+    "                    dn_list.reverse()\n",
+    "                    count = 0\n",
+    "                    max_price_list = []\n",
+    "                    min_price_list = []\n",
+    "                    for idx, element in enumerate(other_up_dn_list):\n",
+    "                        if element == \"D\":\n",
+    "                            count + 1\n",
+    "                            max_price_list.append(dn_list[idx])\n",
+    "                        min_price_list.append(up_list[idx])\n",
+    "                        if count == 3:\n",
+    "                            break\n",
+    "                    if prev_up_down == \"D\" and max(max_price_list) == max_price_list[2]:\n",
+    "                        if prev_signal_down_price != 0:\n",
+    "                            if prev_signal_down_price < min(min_price_list):\n",
+    "                                signal = \"fD(U)\"\n",
+    "                            elif prev_signal_down_price == min(min_price_list):\n",
+    "                                signal = \"fD(0)\"\n",
+    "                            else:\n",
+    "                                signal = \"fD(D)\"\n",
+    "                        prev_signal_down_price = min(min_price_list) \n",
+    "                    other_up_dn_list.reverse()\n",
+    "                    up_list.reverse()\n",
+    "                    dn_list.reverse()\n",
     "        \n",
     "        if UD == \"D\":\n",
     "            if other_up_dn_list.count(\"U\") > 2:\n",
     "                if other_up_dn_list.count(\"U\") == 6:\n",
     "                    if prev_up_down == \"U\" and min(up_list) == up_list[0]:\n",
-    "                        if prev_signal_up_price <= up_list[0]:\n",
+    "                        if prev_signal_up_price < max(dn_list):\n",
     "                            signal = \"fU(U)\"\n",
+    "                        elif prev_signal_up_price == max(dn_list):\n",
+    "                            signal = \"fU(0)\"\n",
     "                        else:\n",
     "                            signal = \"fU(D)\"\n",
-    "                        signal_price = max(up_list)\n",
-    "                        prev_signal_down_price = dn_list[0]\n",
+    "                        prev_signal_down_price = max(dn_list)\n",
     "                else:\n",
-    "                    if prev_up_down == \"U\" and min(new_up_list) == new_up_list[0]:\n",
-    "                        if prev_signal_up_price != 0:\n",
-    "                            if prev_signal_up_price <= new_up_list[0]:\n",
+    "                    other_up_dn_list.reverse()\n",
+    "                    up_list.reverse()\n",
+    "                    dn_list.reverse()\n",
+    "                    count = 0\n",
+    "                    max_price_list = []\n",
+    "                    min_price_list = []\n",
+    "                    for idx, element in enumerate(other_up_dn_list):\n",
+    "                        if element == \"U\":\n",
+    "                            count + 1\n",
+    "                            min_price_list.append(up_list[idx])\n",
+    "                        max_price_list.append(dn_list[idx])\n",
+    "                        if count == 3:\n",
+    "                            break\n",
+    "                    if prev_up_down == \"U\" and min(min_price_list) == min_price_list[2]:\n",
+    "                        if prev_signal_down_price != 0:\n",
+    "                            if prev_signal_down_price < max(max_price_list):\n",
     "                                signal = \"fU(U)\"\n",
+    "                            elif prev_signal_down_price == max(max_price_list):\n",
+    "                                signal = \"fU(0)\"\n",
     "                            else:\n",
     "                                signal = \"fU(D)\"\n",
-    "                            signal_price = max(new_up_list)   \n",
-    "                        prev_signal_up_price = up_list[0]\n",
-    "            if len(new_dn_list) > 2:\n",
-    "                new_dn_list.pop(0)\n",
-    "            new_dn_list.append(high_price)\n",
+    "                        prev_signal_down_price = max (max_price_list) \n",
+    "                    other_up_dn_list.reverse()\n",
+    "                    up_list.reverse()\n",
+    "                    dn_list.reverse()\n",
     "        \n",
     "        if volume_up_dn == \"UP\":\n",
     "            if (max_price < high_price) and (volume_rate > 1):\n",
