signal 구하는 로직 최종 수정 ( 가장 최근 요소 비교 X )

--- a/cashup_backend/CollectBackData5m.ipynb
+++ b/cashup_backend/CollectBackData5m.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "400d3686",
    "metadata": {},
    "outputs": [],
@@ -189,18 +189,6 @@
     "                hour_up_down = \"DN(D)\"\n",
     "            last_dn = low_price\n",
     "        \n",
-    "        if len(dn_list) > 5:\n",
-    "            dn_list.pop(0)\n",
-    "        dn_list.append(high_price)\n",
-    "            \n",
-    "        if len(up_list) > 5:\n",
-    "            up_list.pop(0)\n",
-    "        up_list.append(low_price)\n",
-    "        \n",
-    "        if len(other_up_dn_list) > 5:\n",
-    "            other_up_dn_list.pop(0)\n",
-    "        other_up_dn_list.append(UD)\n",
-    "        \n",
     "        if UD == \"U\":\n",
     "            if other_up_dn_list.count(\"D\") > 2:\n",
     "                if other_up_dn_list.count(\"D\") == 6:\n",
@@ -277,6 +265,18 @@
     "                    other_up_dn_list.reverse()\n",
     "                    up_list.reverse()\n",
     "                    dn_list.reverse()\n",
+    "                    \n",
+    "        if len(dn_list) > 5:\n",
+    "            dn_list.pop(0)\n",
+    "        dn_list.append(high_price)\n",
+    "            \n",
+    "        if len(up_list) > 5:\n",
+    "            up_list.pop(0)\n",
+    "        up_list.append(low_price)\n",
+    "        \n",
+    "        if len(other_up_dn_list) > 5:\n",
+    "            other_up_dn_list.pop(0)\n",
+    "        other_up_dn_list.append(UD)\n",
     "        \n",
     "        if volume_up_dn == \"UP\":\n",
     "            if (max_price < high_price) and (volume_rate > 1):\n",
@@ -535,8 +535,8 @@
     "        element = MinuteData()\n",
     "        element.datetime = datetime\n",
     "        element.open_price = open_price\n",
-    "        element.min_price = min_price\n",
-    "        element.max_price = max_price\n",
+    "        element.min_price = low_price\n",
+    "        element.max_price = high_price\n",
     "        element.close_price = close_price\n",
     "        element.avg_price = avg_price\n",
     "        element.volume = volume\n",
