--- a/cashup_backend/CollectBackData5m.ipynb
+++ b/cashup_backend/CollectBackData5m.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "400d3686",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
     "                    min_price_list = []\n",
     "                    for idx, element in enumerate(other_up_dn_list):\n",
     "                        if element == \"D\":\n",
-    "                            count + 1\n",
+    "                            count += 1\n",
     "                            max_price_list.append(dn_list[idx])\n",
     "                        min_price_list.append(up_list[idx])\n",
     "                        if count == 3:\n",
@@ -248,7 +248,7 @@
     "                    min_price_list = []\n",
     "                    for idx, element in enumerate(other_up_dn_list):\n",
     "                        if element == \"U\":\n",
-    "                            count + 1\n",
+    "                            count += 1\n",
     "                            min_price_list.append(up_list[idx])\n",
     "                        max_price_list.append(dn_list[idx])\n",
     "                        if count == 3:\n",
