Modify MinuteData & fix error

--- a/cashup_backend/CollectBackData5m.ipynb
+++ b/cashup_backend/CollectBackData5m.ipynb
@@ -54,7 +54,8 @@
     "    URL = \"https://www.bitmex.com/api/v1/trade/bucketed?symbol=XBT&binSize=5m&partial=false&start={}&count=1000&reverse=false\".format(start)\n",
     "    request = requests.get(URL).json()\n",
     "    for data in request:\n",
-    "        datetime = datetime.strptime(data['timestamp'].replace(\"T\", \" \")[0:19], \"%Y-%m-%d %H:%M:%S\") + timedelta(hours=8)\n",
+    "        datetime = datetime.strptime(data['timestamp'].replace(\"T\", \" \")[0:19], \"%Y-%m-%d %H:%M:%S\") + timedelta(\n",
+    "        hours=9) - timedelta(minutes=5)\n",
     "        open_price = data['open'] if data['open'] is not None else 0\n",
     "        high_price = data['high'] if data['high'] is not None else 0\n",
     "        low_price = data['low'] if data['low'] is not None else 0\n",
